Fix: horizontal scrolling issue

--- a/src/style.css
+++ b/src/style.css
@@ -56,6 +56,7 @@ body {
   background-color: #2c3039;
   font-family: "Roboto", sans-serif;
   max-width: 100%;
+  overflow-x: hidden;
 }
 
 h1,
